# amazon-redshift-odbc-driver

./: .gitattributes  .gitchangelog.rc  AZURE_OAUTH_FIX_INSTRUCTIONS.md  AZURE_OAUTH_SOLUTION.md  AZURE_OAUTH_SOLUTION_HE.md  BLD002-CRITICAL-FIXES.md  BLD002-DEBUG-CHANGELOG.md  BUILD-ON-WINDOWS.txt  BUILD.CMAKE.md  BUILD_COMPLETE.md  BUILD_STATUS.md  CHANGELOG.md  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  DOWNLOAD_AND_TEST.md  FINAL_SUMMARY.txt  GITHUB-BUILD-INSTRUCTIONS.md  INDEX.md  KNOWN_ISSUES.md  PROJECT_COMPLETE_SUMMARY.md  QUICKSTART.md  README.md  README_AZURE_FIX.md  README_HE.md  THIRD_PARTY_LICENSES  WINDOWS-BUILD-READY.bat  build64.bat  build64.sh  exports_basic.bat  exports_basic.sh  package64.bat  version.txt
src/odbc/rsodbc/: .cproject  .project  CMakeLists.txt  ReadMe.txt  amazon.redshiftodbc.ini  build.txt  build64.bat  build64.sh  clean64.sh  create64bit-rpm.sh  dllmain.c  exports.linux.list  exports.mac.list  linux_port.h  odbc.csh.x64  odbc.ini.in  odbc.ini.x64  odbc.sh.x64  odbc_x64.spec  odbc_x86.spec  odbcinst.ini.in  odbcinst.ini.x64  package.txt  package64.bat  package64.sh  resource.h  root.crt  rsMetadataAPIHelper.cpp  rsMetadataAPIHelper.h  rsMetadataAPIPostProcessing.cpp  rsMetadataAPIPostProcessing.h  rsMetadataAPIPostProcessor.cpp  rsMetadataAPIPostProcessor.h  rsMetadataServerAPIHelper.cpp  rsMetadataServerAPIHelper.h  rsMetadataServerProxy.cpp  rsMetadataServerProxy.h  rsMetadataServerProxyHelper.cpp  rsMetadataServerProxyHelper.h  rs_pq_type.h  (+50 more)
src/odbc/rsodbc/Debug/: makefile  objects.mk  sources.mk  subdir.mk
src/odbc/rsodbc/ModifyMsi/: ModifyMsi.cpp  ModifyMsi.h  ModifyMsi.sln  ModifyMsi.vcproj  ModifyMsi.vcxproj  ModifyMsi.vcxproj.filters  StdAfx.cpp  StdAfx.h
src/odbc/rsodbc/Release/: makefile  objects.mk  subdir.mk
src/odbc/rsodbc/iam/: RsCredentials.cpp  RsCredentials.h  RsErrorException.cpp  RsErrorException.h  RsHttpProxyProperties.h  RsHttpProxySettings.h  RsIamClient.cpp  RsIamClient.h  RsIamEntry.cpp  RsIamEntry.h  RsIamHelper.cpp  RsIamHelper.h  RsLogger.cpp  RsLogger.h  RsSettings.h  RsUidPwdProperties.h  RsUidPwdSettings.h  rs_iam_support.h  rs_string.cpp  rs_string.h  rs_wstring.h
src/odbc/rsodbc/iam/core/: IAMConfiguration.cpp  IAMConfiguration.h  IAMCredentials.cpp  IAMCredentials.h  IAMCredentialsProvider.cpp  IAMCredentialsProvider.h  IAMFactory.cpp  IAMFactory.h  IAMProfileConfigLoader.cpp  IAMProfileConfigLoader.h  IAMProfileCredentialsProvider.cpp  IAMProfileCredentialsProvider.h  IAMUtils.cpp  IAMUtils.h
src/odbc/rsodbc/iam/http/: AddrInformation.cpp  AddrInformation.h  HtmlResponse.h  IAMCurlHttpClient.cpp  IAMCurlHttpClient.h  IAMHttpClient.cpp  IAMHttpClient.h  IAMWinHttpClient.cpp  IAMWinHttpClient.h  IAMWinHttpClientDelegate.cpp  IAMWinHttpClientDelegate.h  Parser.cpp  Parser.h  Selector.cpp  Selector.h  Socket.cpp  Socket.h  SocketStream.h  SocketSupport.h  WEBServer.cpp  WEBServer.h
src/odbc/rsodbc/iam/plugins/: BrowserIdcAuthPlugin.cpp  BrowserIdcAuthPlugin.h  IAMAdfsCredentialsProvider.cpp  IAMAdfsCredentialsProvider.h  IAMAzureCredentialsProvider.cpp  IAMAzureCredentialsProvider.h  IAMBrowserAzureCredentialsProvider.cpp  IAMBrowserAzureCredentialsProvider.h  IAMBrowserAzureOAuth2CredentialsProvider.cpp  IAMBrowserAzureOAuth2CredentialsProvider.cpp.backup-build15  IAMBrowserAzureOAuth2CredentialsProvider.h  IAMBrowserSamlCredentialsProvider.cpp  IAMBrowserSamlCredentialsProvider.h  IAMExternalCredentialsProvider.cpp  IAMExternalCredentialsProvider.h  IAMJwtBasicCredentialsProvider.cpp  IAMJwtBasicCredentialsProvider.h  IAMJwtPluginCredentialsProvider.cpp  IAMJwtPluginCredentialsProvider.h  IAMOktaCredentialsProvider.cpp  IAMOktaCredentialsProvider.h  IAMPingCredentialsProvider.cpp  IAMPingCredentialsProvider.h  IAMPluginCredentialsProvider.cpp  IAMPluginCredentialsProvider.h  IAMPluginFactory.cpp  IAMPluginFactory.h  IAMSamlPluginCredentialsProvider.cpp  IAMSamlPluginCredentialsProvider.h  IdpTokenAuthPlugin.cpp  IdpTokenAuthPlugin.h  JwtIamAuthPlugin.cpp  JwtIamAuthPlugin.h  NativePluginCredentialsProvider.cpp  NativePluginCredentialsProvider.h
src/odbc/rsodbc/install/: Amazon_Redshift_EULA.rtf  Make_x64.bat  rsodbc_x64.wxs  rsodbcm_x64.wxs
src/odbc/rsodbc/rsodbc_setup/: CMakeLists.txt  build64.bat  resource.h  rsodbcsetup.def  rsodbcsetup.rc  rsodbcsetup.sln  rsodbcsetup.vcproj  rsodbcsetup.vcxproj  rsodbcsetup.vcxproj.filters  setup.c  version.h  version.h.in
src/odbc/rsodbc/rsodbcsql/: .cproject  .project  CMakeLists.txt  build64.bat  build64.sh  clean64.sh  resource.h  rsodbcsql.c  rsodbcsql.h  rsodbcsql.rc  rsodbcsql.sln  rsodbcsql.vcproj  rsodbcsql.vcxproj  rsodbcsql.vcxproj.filters
src/odbc/rsodbc/rsodbcsql/Debug/: makefile  objects.mk  subdir.mk
src/odbc/rsodbc/rsodbcsql/Release/: makefile  subdir.mk
src/odbc/rsodbc/samples/: build64.bat  build64.sh  clean64.sh
src/odbc/rsodbc/samples/connect/: CMakeLists.txt  ReadMe.txt  build64.bat  build64.sh  clean64.sh  connect.c  connect.mak  connect.rc  connect.sln  connect.vcproj  connect.vcxproj  connect.vcxproj.filters  resource.h
src/pgclient/src/interfaces/libpq/: .cproject  .gitignore  .project  CMakeLists.txt  ClientSideCursorExecutor.c  ClientSideCursorExecutor.h  ClientSideCursorInputStream.c  ClientSideCursorInputStream.h  ClientSideCursorLock.c  ClientSideCursorLock.h  ClientSideCursorMultiResultLock.c  (+45 more)
src/pgclient/src/port/: CMakeLists.txt  Makefile  chklocale.c  dirent.c  dirmod.c  exec.c  getpeereid.c  inet_net_ntop.c  isinf.c  path.c  snprintf.c  win32env.c
unittest/: CMakeLists.txt  bindoffset_test.cpp  browser_idc_auth_test.cpp  common.h  default_ctype_test.cpp  default_value_test.cpp  iam_azure_partition_test.cpp  iam_instance_profile_test.cpp  idp_token_auth_plugin_test.cpp  metadata_api_helper_test.cpp  odbcescapeclause_test.cpp  oid_mapping_test.cpp  rsMetadataAPIPostProcessorTest.cpp  rslog_test.cpp  rsoptions_test.cpp  rsresult_test.cpp  rstrace_safety_test.cpp  rsunicode_test.cpp  rsutil_test.cpp  unittest_main.cpp  url-validation-test.cpp  varchar_promotion_test.cpp  version_test.cpp  zpq_stream_test.cpp
(+1770 files in other folders)
